<resources>
    <string name="app_name">MTG Companion V2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cardActivityTitle">Card</string>
    <string name="cardImageDescription">Card Art</string>
    <string name="cardName">Card Name</string>
    <string name="cardPower">Power</string>
    <string name="cardToughness">Toughness</string>
    <string name="cardNeuCost">Neutral</string>
    <string name="cardWhtCost">White</string>
    <string name="cardBlkCost">Black</string>
    <string name="cardRedCost">Red</string>
    <string name="cardBluCost">Blue</string>
    <string name="cardGrnCost">Green</string>
    <string name="cardDescription">Description</string>
    <string name="button_addCard">Add Card</string>
    <string name="cardListTitle">Card List</string>
    <string name="FltAddBtnDescription">Floating Add Button</string>
    <string name="searchHint">Search</string>
    <string name="navDrawerItemAddCard">Add Card</string>
    <string name="navDrawerItemCardList">List of Cards</string>
    <string name="topBarLabelCard">Card</string>
    <string name="topBarLabelCardList">Card List</string>
    <string name="mapPlaceName">Sample Name</string>
    <string name="mapPlaceAddress">Sample Address</string>
    <string name="mapPlaceLoc">0, 0</string>
    <string name="mapPlaceRating">0, 0</string>
    <string name="mapStarDesc">Star Icon</string>
    <string name="mapPlaceTotalUserRatings">0</string>
    <string name="mapPlaceOpen">True</string>
    <string name="navDrawerItemMap">Map</string>
    <string name="topBarLabelMap">Map</string>
    <string name="saveCard">Save Card</string>
    <string name="select_card_art">Select Card Art</string>
    <string name="menuItemDeleteCard">Delete</string>
    <string name="cardsNotFound">No Cards Yet… \nGo Create a Card!</string>
    <string name="cardError">Error: Could not Create a Card… </string>
    <string name="cardColourNeutral">Neutral</string>
    <string name="cardColourWhite">White</string>
    <string name="cardColourBlack">Black</string>
    <string name="cardColourRed">Red</string>
    <string name="cardColourBlue">Blue</string>
    <string name="cardColourGreen">Green</string>
    <string name="cardSet">Set</string>
    <string name="cardValue">Value</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="messageLoading">Please wait while the cards are loading…</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="sortTermNone">None</string>
    <string name="sortTermAscendingPower">Ascending Power</string>
    <string name="sortTermDescendingPower">Descending Power</string>
    <string name="sortTermAscendingToughness">Ascending Toughness</string>
    <string name="sortTermDescendingToughness">Descending Toughness</string>
    <string name="sortTermAscendingTotalCost">Ascending Total Cost</string>
    <string name="sortTermDescendingTotalCost">Descending Total Cost</string>
    <string name="cardDescriptionHint">Enter card description</string>
    <string name="cardNameHint">Enter the card name</string>
</resources>