<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cardFragment"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/navDrawerItemAddCard" />
        <item
            android:id="@+id/cardListFragment"

            android:icon="@drawable/ic_menu_list"
            android:title="@string/navDrawerItemCardList" />
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/navDrawerItemMap" />
        <item android:title="Access Control">
            <menu>
                <item
                    android:id="@+id/loginFragment"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:onClick="signOut"
                    android:title="@string/sign_out" />
            </menu>
        </item>
    </group>
</menu>