<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.card.CardFragment">

    <ImageView
        android:id="@+id/cardArtImgVw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cardImageDescription"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="@id/cardPowerNumTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardNameTxt"
        app:layout_constraintTop_toTopOf="@id/cardNameTxt"
        app:srcCompat="@drawable/ic_default_card_art"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/cardNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/cardName"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:maxLength="64"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/cardArtImgVw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/cardTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/cardTypes"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@id/cardNameTxt"
        app:layout_constraintStart_toStartOf="@id/cardNameTxt"
        app:layout_constraintTop_toBottomOf="@id/cardNameTxt" />

    <EditText
        android:id="@+id/cardPowerNumTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/cardPower"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/cardToughnessNumTxt"
        app:layout_constraintStart_toStartOf="@id/cardNameTxt"
        app:layout_constraintTop_toBottomOf="@id/cardTypeSpinner"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cardToughnessNumTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cardToughness"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/cardNameTxt"
        app:layout_constraintStart_toEndOf="@id/cardPowerNumTxt"
        app:layout_constraintTop_toBottomOf="@id/cardTypeSpinner"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cardNeuCostNumTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/cardNeuCost"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/cardWhtCostNumTxt"
        app:layout_constraintStart_toStartOf="@id/cardNameTxt"
        app:layout_constraintTop_toBottomOf="@id/cardPowerNumTxt"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cardWhtCostNumTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/cardWhtCost"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/cardBlkCostNumTxt"
        app:layout_constraintStart_toEndOf="@id/cardNeuCostNumTxt"
        app:layout_constraintTop_toBottomOf="@id/cardPowerNumTxt"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cardBlkCostNumTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/cardBlkCost"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/cardRedCostNumTxt"
        app:layout_constraintStart_toEndOf="@id/cardWhtCostNumTxt"
        app:layout_constraintTop_toBottomOf="@id/cardPowerNumTxt"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cardRedCostNumTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/cardRedCost"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/cardBluCostNumTxt"
        app:layout_constraintStart_toEndOf="@id/cardBlkCostNumTxt"
        app:layout_constraintTop_toBottomOf="@id/cardPowerNumTxt"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cardBluCostNumTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/cardBluCost"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@id/cardGrnCostNumTxt"
        app:layout_constraintStart_toEndOf="@id/cardRedCostNumTxt"
        app:layout_constraintTop_toBottomOf="@id/cardPowerNumTxt"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cardGrnCostNumTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/cardGrnCost"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/cardArtImgVw"
        app:layout_constraintStart_toEndOf="@id/cardBluCostNumTxt"
        app:layout_constraintTop_toBottomOf="@id/cardPowerNumTxt"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cardDescriptionMLTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/cardDescription"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxHeight="256dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/cardGrnCostNumTxt"
        app:layout_constraintStart_toStartOf="@id/cardNameTxt"
        app:layout_constraintTop_toBottomOf="@id/cardNeuCostNumTxt" />

    <Button
        android:id="@+id/addCardBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/button_addCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>