<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapMpVw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/mapMarkerInfoCrdVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mapMarkerInfoCrdVw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mapPlaceNameTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/mapPlaceName"
                android:textSize="26sp"
                app:layout_constraintEnd_toStartOf="@id/mapPlaceRatingTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mapPlaceAddressTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mapPlaceAddress"
                app:layout_constraintEnd_toEndOf="@id/mapPlaceNameTxt"
                app:layout_constraintStart_toStartOf="@id/mapPlaceNameTxt"
                app:layout_constraintTop_toBottomOf="@id/mapPlaceNameTxt" />

            <TextView
                android:id="@+id/mapPlaceLocTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/mapPlaceLoc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/mapPlaceNameTxt"
                app:layout_constraintStart_toStartOf="@id/mapPlaceNameTxt"
                app:layout_constraintTop_toBottomOf="@id/mapPlaceAddressTxt" />

            <TextView
                android:id="@+id/mapPlaceRatingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/mapPlaceRating"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@id/mapRatingsStarIcon"
                app:layout_constraintStart_toEndOf="@id/mapPlaceNameTxt"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mapRatingsStarIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/mapStarDesc"
                app:layout_constraintBottom_toBottomOf="@id/mapPlaceRatingTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mapPlaceRatingTxt"
                app:layout_constraintTop_toTopOf="@id/mapPlaceRatingTxt"
                app:srcCompat="@android:drawable/btn_star_big_on"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/mapTotalUserRatingsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:minWidth="64dp"
                android:text="@string/mapPlaceTotalUserRatings"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/mapRatingsStarIcon"
                app:layout_constraintStart_toStartOf="@id/mapPlaceRatingTxt"
                app:layout_constraintTop_toBottomOf="@id/mapPlaceRatingTxt" />

            <TextView
                android:id="@+id/mapOpenTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:minWidth="64dp"
                android:text="@string/mapPlaceOpen"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/mapRatingsStarIcon"
                app:layout_constraintStart_toStartOf="@id/mapPlaceRatingTxt"
                app:layout_constraintTop_toBottomOf="@id/mapTotalUserRatingsTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>