<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/cardListFragment">
    <fragment
        android:id="@+id/cardFragment"
        android:name="org.wit.mtgcompanionv2.ui.card.CardFragment"
        android:label="@string/topBarLabelCard"
        tools:layout="@layout/fragment_card" >
        <action
            android:id="@+id/action_cardFragment_to_cardListFragment"
            app:destination="@id/cardListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_cardFragment_to_mapFragment"
            app:destination="@id/mapFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <argument
            android:name="edit"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="card"
            app:argType="org.wit.mtgcompanionv2.models.CardModel"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="quickAdd"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_cardFragment_to_login2"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/cardListFragment"
        android:name="org.wit.mtgcompanionv2.ui.cardList.CardListFragment"
        android:label="@string/topBarLabelCardList" >
        <action
            android:id="@+id/action_cardListFragment_to_cardFragment"
            app:destination="@id/cardFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_cardListFragment_to_mapFragment"
            app:destination="@id/mapFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_cardListFragment_to_login2"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="org.wit.mtgcompanionv2.ui.map.MapFragment"
        android:label="@string/topBarLabelMap"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_mapFragment_to_cardListFragment"
            app:destination="@id/cardListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_mapFragment_to_cardFragment"
            app:destination="@id/cardFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_mapFragment_to_login2"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_mapFragment_to_cardListFragment2"
            app:destination="@id/cardListFragment" />
    </fragment>
    <activity
        android:id="@+id/loginFragment"
        android:name="org.wit.mtgcompanionv2.ui.auth.Login"
        android:label="Login" />
</navigation>