<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardListConstLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.cardList.CardListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardListRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@id/menuBottomToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/cardsNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardsNotFound"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cards not Found."/>

    <Toolbar
        android:id="@+id/menuBottomToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:background="?attr/colorSecondaryVariant"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_anchorGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cardListSearchTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/searchHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minWidth="128dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/menuBottomToolbar"
        app:layout_constraintEnd_toStartOf="@id/cardListSearchBySpinner"
        app:layout_constraintStart_toStartOf="@id/menuBottomToolbar"
        app:layout_constraintTop_toTopOf="@id/menuBottomToolbar"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/cardListSearchBySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:entries="@array/searchTypes"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/menuBottomToolbar"
        app:layout_constraintEnd_toEndOf="@id/menuBottomToolbar"
        app:layout_constraintStart_toEndOf="@id/cardListSearchTxt"
        app:layout_constraintTop_toTopOf="@id/menuBottomToolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuFloatingAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/FltAddBtnDescription"
        app:layout_constraintBottom_toTopOf="@id/menuBottomToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>